z-index fix

--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ th {
   overflow: hidden;
   line-height: 0;
   transform: rotate(180deg);
+  z-index: 1;
 }
 
 .custom-shape-divider-top-1670275589 svg {
@@ -336,4 +337,5 @@ th {
 
 .custom-shape-divider-top-1670275589 .shape-fill {
   fill: #1b1b1b;
+
 }
